--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,16 @@ set (CMAKE_CXX_STANDARD 11)
 find_package(OpenGL REQUIRED)
 FIND_PACKAGE(ASSIMP REQUIRED)
 
+FIND_LIBRARY(${SOIL_LIBRARY} NAMES libSOIL.a
+    PATHS "/home/zoe/")
+
+
+#----------------------------------------------------------
+# Dependencies - OpenCV
+#----------------------------------------------------------
+find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
+
 if( CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR )
     message( FATAL_ERROR "Please select another Build Directory ! (and give it a clever name, like bin_Visual2012_64bits/)" )
 endif()
@@ -15,6 +25,7 @@ if( CMAKE_BINARY_DIR MATCHES " " )
 	message( "Your Build Directory contains spaces. If you experience problems when compiling, this can be the cause." )
 endif()
 
+
 include_directories(
         external/AntTweakBar-1.16/include/
         external/glfw-3.1.2/include/
@@ -24,7 +35,8 @@ include_directories(
         external/bullet-2.81-rev2613/src/
         commmon/
         ${ASSIMP_INCLUDE}
-
+        ${PATH_TO_SOIL}
+        /home/zoe/Installations/Simple_OpenGL_Image_Library/src/
 )
 
 add_definitions(
@@ -40,6 +52,14 @@ set(ALL_LIBS
         ${OPENGL_LIBRARY}
         glfw
         GLEW_1130
+        ${OpenCV_LIBS}
+        -lassimp
+        -lSOIL
+        -lboost_system -lboost_filesystem
+        #-opencv_core
+        #-opencv_highgui
+        #-opencv_imgproc
+        #-opencv_imgcodecs
 )
 
 # Compile external dependencies
@@ -62,16 +82,19 @@ add_executable(shapenetloader
     viewer.cpp
     main.cpp
     control.cpp
+    object.cpp
     shaders/simple_vertex_shader.vertexshader
     shaders/simple_fragment_shader.fragmentshader
     shaders/material_vertex_shader.vertexshader
     shaders/material_fragment_shader.fragmentshader
+    shaders/texture_vertex_shader.vertexshader
+    shaders/texture_fragment_shader.fragmentshader
     )
 
 
 target_link_libraries(shapenetloader
         ${ALL_LIBS}
-        -lassimp
+
 )
 #set_target_properties(shapenetloader PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shapenet_loader/")
 #create_target_launcher(shapenetloader WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/shapenet_loader/")
